--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.4",
     "sass": "^1.58.3"
   }
 }
