--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "file-system": "^2.2.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +44,12 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/uniqid": "^5.3.2",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.4",
