--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.11",
+    "bootstrap": "^5.3.0-alpha1",
     "file-system": "^2.2.2",
     "lodash": "^4.17.21",
+    "material-components-web": "^14.0.0",
+    "mdb-react-ui-kit": "^5.1.0",
+    "mdb-ui-kit": "^6.2.0",
+    "mdbreact": "^5.2.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
