--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/lodash": "^4.14.191",
     "@types/uniqid": "^5.3.2",
     "@types/webpack-env": "^1.18.0",
